# Quantum-Computing

./: .gitignore  CHSH_sympy.ipynb  pyproject.toml  tele.ipynb
sheet03/: 3-2.ipynb  3-3.ipynb  sheet03.ipynb
sheet04/: sheet04.ipynb
sheet05/: submission.ipynb
sheet06/: Grover.cs  Santucci-12203019.ipynb
sheet07/: Santucci-12203019.ipynb
sheet08/: Santucci-12203019.ipynb
sheet09/: sheet09_shor_template.ipynb
