[tool.poetry]
name = "quantum"
version = "0.1.0"
description = ""
authors = ["Shannah Santucci <shannah.santucci@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<=3.14"
cirq = "^1.3.0"
qiskit = "1.1.0"
qiskit-ibm-runtime = "^0.23.0"
sympy = "^1.12"
qiskit-aer = "0.14.2"
nbconvert = "^7.16.4"
networkx = "3.3"
pylatexenc = "2.10"
pydantic = "^2.7.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
